manifests/ph-static-h5/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ph-static-h5
  namespace: xinfa
  labels:
    app: ph-static-h5
    tier: frontend
spec:
  selector:
    matchLabels:
      app: ph-static-h5
      tier: frontend
  template:
    metadata:
      labels:
        app: ph-static-h5
        tier: frontend
    spec:
      containers:
        - name: ph-static-h5
          image: git.caspen-tech.com:5050/jolly88-complex/frontend:ph-static-h5-1686215066 # {"$imagepolicy": "xinfa:ph-static-h5"}
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources:
            requests:
              memory: 256Mi
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - ph-static-h5
              topologyKey: kubernetes.io/hostname
      imagePullSecrets:
        - name: gitlab-registry
